# tileflow

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
benchmarks/: matmul_32x32.py  mlp_e2e.py  mlp_threaded.py
docs/: architecture.txt  roofline.md  week1_report.md  week2_plan.md  week2_report.md  week3_plan.md  week3_report.md  week4_plan.md  week4_report.md  week5_plan.md  week5_report.md  week6_plan.md  week6_report.md
examples/: __init__.py  mlp_fused.py  mlp_runtime.py  mlp_scheduled.py  mlp_threaded.py  mlp_tiled.py  simulate_avx2_viz.py
include/mini_runtime/: arena.hpp  constants.hpp  engine.hpp  kernels.hpp  ring_buffer.hpp  schedule.hpp  tensors.hpp  threaded_engine.hpp  work_item.hpp
src/bindings/: bindings.cpp
src/compiler/: __init__.py  runtime.py
src/compiler/ir/: __init__.py  dtypes.py  graph.py  op.py  tensor.py
src/compiler/passes/: __init__.py  fusion.py  lowering.py  tiling.py
src/compiler/scheduler/: __init__.py  memory.py  ops.py  scheduler.py
src/runtime/engine/: engine.cpp  threaded_engine.cpp
src/runtime/kernels/: dispatcher.cpp  matmul_avx2.cpp  matmul_ref.cpp
src/runtime/memory/: arena.cpp  tensors.cpp
tests/: conftest.py  test_fusion.py  test_integration.py  test_ir.py  test_kernels.cpp  test_kernels_avx2.py  test_lowering.py  test_ring_buffer.cpp  test_runtime.py  test_scheduler.py  test_threaded_runtime.py
